# ChangeLog for x11-apps/xdm
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdm/ChangeLog,v 1.68 2007/05/05 18:19:49 dang Exp $

  05 May 2007; Daniel Gryniewicz <dang@gentoo.org> xdm-1.1.4.ebuild:
  Marked stable on amd64 for bug #175465

  29 Apr 2007; Andrej Kacian <ticho@gentoo.org> xdm-1.1.4.ebuild:
  Stable on x86, bug #175465.

  25 Apr 2007; Raúl Porcel <armin76@gentoo.org> xdm-1.1.4.ebuild:
  Stable on ia64 wrt bug #175465

  25 Apr 2007; Markus Rothe <corsair@gentoo.org> xdm-1.1.4.ebuild:
  Stable on ppc64; bug #175465

  21 Apr 2007; Joshua Baergen <joshuabaergen@gentoo.org> -xdm-1.1.0.ebuild,
  -xdm-1.1.3.ebuild:
  Drop unused versions.

*xdm-1.1.4 (16 Feb 2007)

  16 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org> +xdm-1.1.4.ebuild:
  Version bump.  Includes minor bugfixes.

*xdm-1.1.3 (16 Dec 2006)

  16 Dec 2006; Joshua Baergen <joshuabaergen@gentoo.org> -xdm-1.1.2.ebuild,
  -xdm-1.1.2-r1.ebuild, +xdm-1.1.3.ebuild:
  Version bump for 7.2.  Build/dist fix only.

*xdm-1.1.2-r1 (12 Dec 2006)

  12 Dec 2006; Donnie Berkholz <dberkholz@gentoo.org>; files/xdm.pamd,
  +xdm-1.1.2-r1.ebuild:
  (#151173) Move the system-auth include below pam_nologin. This problem would
  cause /etc/nologin to screw up and bypass the /etc/shells check.

*xdm-1.1.2 (02 Dec 2006)

  02 Dec 2006; Joshua Baergen <joshuabaergen@gentoo.org> -xdm-1.1.1.ebuild,
  +xdm-1.1.2.ebuild:
  Version bump for 7.2RC3.  Includes a minor build fix.

*xdm-1.1.1 (14 Nov 2006)

  14 Nov 2006; Joshua Baergen <joshuabaergen@gentoo.org> +xdm-1.1.1.ebuild:
  Version bump for 7.2RC2.  Contains minor bugfixes.

*xdm-1.1.0 (04 Oct 2006)

  04 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; +xdm-1.1.0.ebuild:
  Minor feature release -- adds use of Xft for drawing greeter dialog text,
  and overhaul of PAM code to allow complete PAM conversation.

  26 Jul 2006; Joshua Baergen <joshuabaergen@gentoo.org> xdm-1.0.5.ebuild: