@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xinit
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xinit/ChangeLog,v 1.86 2007/05/12 19:08:06 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xinit/ChangeLog,v 1.87 2007/05/20 22:24:10 jer Exp $
+
+  20 May 2007; Jeroen Roovers <jer@gentoo.org> xinit-1.0.3-r3.ebuild:
+  Stable for HPPA (bug #175465).
 
   12 May 2007; nixnut <nixnut@gentoo.org> xinit-1.0.3-r3.ebuild:
   Stable on ppc wrt bug 175465
