@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xkbcomp
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xkbcomp/ChangeLog,v 1.38 2007/05/05 18:21:55 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xkbcomp/ChangeLog,v 1.39 2007/05/20 22:24:09 jer Exp $
+
+  20 May 2007; Jeroen Roovers <jer@gentoo.org> xkbcomp-1.0.3.ebuild:
+  Stable for HPPA (bug #175465).
 
   05 May 2007; Daniel Gryniewicz <dang@gentoo.org> xkbcomp-1.0.3.ebuild:
   Marked stable on amd64 for bug #175465
