@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xdm
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdm/ChangeLog,v 1.68 2007/05/05 18:19:49 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdm/ChangeLog,v 1.69 2007/05/20 22:28:31 jer Exp $
+
+  20 May 2007; Jeroen Roovers <jer@gentoo.org> xdm-1.1.4.ebuild:
+  Stable for HPPA (bug #175465).
 
   05 May 2007; Daniel Gryniewicz <dang@gentoo.org> xdm-1.1.4.ebuild:
   Marked stable on amd64 for bug #175465
